--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,8 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: aegis_postgres
-    # Ici, on mappe tes variables .env vers les variables officielles de l'image Postgres
     environment:
-      POSTGRES_USER: ${DATABASE_USER}      # Lit la variable du fichier .env
+      POSTGRES_USER: ${DATABASE_USER}    
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
     ports:
@@ -26,7 +25,6 @@ services:
     volumes:
       - ../backend:/app
       - /app/node_modules
-    # La magie est ici : on injecte tout le fichier .env directement dans le Node.js
     env_file:
       - .env  
     ports:
@@ -47,7 +45,6 @@ services:
       - /app/node_modules
     ports:
       - "5173:5173"
-    # Le front a parfois besoin de connaitre l'URL de l'API
     environment:
       - VITE_API_URL=http://localhost:${PORT} 
     networks:
