--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # --- SERVICE BASE DE DONNÉES ---
   postgres:
@@ -46,7 +44,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:${PORT} 
+      - VITE_API_URL=http://localhost:${PORT}/api/v1 
     networks:
       - aegis_network
 
